# sfml_snake

./: .gitignore  CMakeLists.txt  README.md
src/: Snake.cpp  Snake.h  main.cpp
